OCEPROJECT-3915 - Anchor links within clinical trial forms are sometimes not clickable in search results to due position relative being set on a parent div. Fix was to put a z-index: -1 on the parent element.

--- a/CancerGov/_src/StyleSheets/components/_forms.scss
+++ b/CancerGov/_src/StyleSheets/components/_forms.scss
@@ -467,6 +467,7 @@ span {
 html.borderradius.generatedcontent {
 	.radio, .checkbox {
 		position: relative;
+		z-index: -1;
 	}
 	span.radio input[type="radio"], span.checkbox input[type="checkbox"] {
 		margin-top: $custom-form-radiocheck-size / 2;
